--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             </li>
           </ul>
           <div class="d-flex align-items-center gap-3">
-            <a class="call w-50 text-nowrap" href="tel:+9100000000">+91 98765 43210</a>
+            <a class="call w-50 text-nowrap" href="+919330935204">+91 93309 35204</a>
             <button class="btn w-50" type="submit">
               BOOK NOW
             </button>
@@ -126,31 +126,29 @@
         <div class="col-lg-6 col-12">
           <h2>Mission</h2>
           <ul>
-            <li>To offer a soulful living experience that reflects the poetic spirit of Shantiniketan and the legacy of
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-goal-icon lucide-goal"><path d="M12 13V2l8 4-8 4"/><path d="M20.561 10.222a9 9 0 1 1-12.55-5.29"/><path d="M8.002 9.997a5 5 0 1 0 8.9 2.02"/></svg></span>To offer a soulful living experience that reflects the poetic spirit of Shantiniketan and the legacy of
               Rabindranath Tagore</li>
-            <li>To create thoughtfully designed bungalow communities that seamlessly blend luxury, nature, and cultural
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-goal-icon lucide-goal"><path d="M12 13V2l8 4-8 4"/><path d="M20.561 10.222a9 9 0 1 1-12.55-5.29"/><path d="M8.002 9.997a5 5 0 1 0 8.9 2.02"/></svg></span>To create thoughtfully designed bungalow communities that seamlessly blend luxury, nature, and cultural
               heritage</li>
-            <li>To ensure every resident enjoys comfort, peace, and a deep connection to the serene surroundings of
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-goal-icon lucide-goal"><path d="M12 13V2l8 4-8 4"/><path d="M20.561 10.222a9 9 0 1 1-12.55-5.29"/><path d="M8.002 9.997a5 5 0 1 0 8.9 2.02"/></svg></span>To ensure every resident enjoys comfort, peace, and a deep connection to the serene surroundings of
               Ballavpur</li>
-            <li>To uphold transparency, quality, and client-centric values throughout the ownership journey.</li>
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-goal-icon lucide-goal"><path d="M12 13V2l8 4-8 4"/><path d="M20.561 10.222a9 9 0 1 1-12.55-5.29"/><path d="M8.002 9.997a5 5 0 1 0 8.9 2.02"/></svg></span>To uphold transparency, quality, and client-centric values throughout the ownership journey.</li>
           </ul>
         </div>
         <div class="col-lg-6 col-12">
           <h2>Vision</h2>
           <ul>
-            <li>To be a trusted name in boutique bungalow and eco-living development in culturally rich destinations
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-scan-eye-icon lucide-scan-eye"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><circle cx="12" cy="12" r="1"/><path d="M18.944 12.33a1 1 0 0 0 0-.66 7.5 7.5 0 0 0-13.888 0 1 1 0 0 0 0 .66 7.5 7.5 0 0 0 13.888 0"/></svg></span>To be a trusted name in boutique bungalow and eco-living development in culturally rich destinations
             </li>
-            <li>To craft lifestyle spaces that honour nature, art, and tradition while offering modern-day comforts</li>
-            <li>To nurture communities that embody tranquility, beauty, and sustainable living.</li>
-            <li>To set new benchmarks in heritage-inspired real estate projects with lasting value for residents and
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-scan-eye-icon lucide-scan-eye"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><circle cx="12" cy="12" r="1"/><path d="M18.944 12.33a1 1 0 0 0 0-.66 7.5 7.5 0 0 0-13.888 0 1 1 0 0 0 0 .66 7.5 7.5 0 0 0 13.888 0"/></svg></span>To craft lifestyle spaces that honour nature, art, and tradition while offering modern-day comforts</li>
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-scan-eye-icon lucide-scan-eye"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><circle cx="12" cy="12" r="1"/><path d="M18.944 12.33a1 1 0 0 0 0-.66 7.5 7.5 0 0 0-13.888 0 1 1 0 0 0 0 .66 7.5 7.5 0 0 0 13.888 0"/></svg></span>To nurture communities that embody tranquility, beauty, and sustainable living.</li>
+            <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-scan-eye-icon lucide-scan-eye"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><circle cx="12" cy="12" r="1"/><path d="M18.944 12.33a1 1 0 0 0 0-.66 7.5 7.5 0 0 0-13.888 0 1 1 0 0 0 0 .66 7.5 7.5 0 0 0 13.888 0"/></svg></span>To set new benchmarks in heritage-inspired real estate projects with lasting value for residents and
               investors alike.</li>
           </ul>
         </div>
       </div>
     </div>
   </section>
-
-  
 
   <footer class="pt-5">
     <div class="container">
@@ -170,14 +168,14 @@
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-navigation">
                   <polygon points="3 11 22 2 13 21 11 13 3 11" />
-                </svg></span> Ballabpur, Dangapara <br> Bolpur Siriniketan, Panrui PS <br> Birbhum <br> West Bengal -
-              731236</li>
+                </svg></span><a href="https://maps.app.goo.gl/vhoavPUKtgLfkySd6" target="_blank"> Ballabpur, Dangapara <br> Bolpur Siriniketan, Panrui PS <br> Birbhum <br> West Bengal -
+              731236</a></li>
             <li><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-phone">
                 <path
                   d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-              </svg> <span class="ps-2"><a href="tel:+9112345678"> +91 98765 43216</a></span></li>
+              </svg> <span class="ps-2"><a href="tel:+918272962740"> +91 82729 62740</a></span></li>
             <li><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-mail">
@@ -190,25 +188,23 @@
           <h3>Quick links</h3>
           <ul>
             <li><a href="privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="privacy-policy.html">Terms of Service</a></li>
-            <li><a href="privacy-policy.html">FAQ</a></li>
-            <li><a href="privacy-policy.html">Walkthrough</a></li>
-            <li><a href="privacy-policy.html">Blogs</a></li>
+            <li><a href="terms-service.html">Terms of Service</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
         </div>
         <div class="col-lg-3 col-12 mt-3 mt-lg-0">
           <h3>Find us on</h3>
-          <div class="d-flex gap-3 "><span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          <div class="d-flex gap-3 "><span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-facebook">
                   <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
-                </svg></a></span> <span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                </svg></a></span> <span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-instagram">
                   <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
                   <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                   <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
-                </svg></a></span> <span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                </svg></a></span> <span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-youtube">
                   <path
