--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section class="hero-top">
     <div class="hero-vid">
-      <video src="https://www.dropbox.com/scl/fi/ky1srw3bn7mlwo4vgpa8b/intro.mp4?rlkey=739h6l0rte4snf54vf26npzb8&st=7uy3hvt1&raw=1" autoplay loop muted></video>
+      <video src="assets/vid/intro.mp4" autoplay loop muted></video>
     </div>
     <div class="hero-container">
       <header>
@@ -69,7 +69,7 @@
                 </li>
               </ul>
               <div class="d-flex align-items-center gap-3">
-                <a class="call w-50 text-nowrap" href="tel:+9100000000">+91 98765 43210</a>
+                <a class="call w-50 text-nowrap" href="tel:+918272962740">+91 82729 62740</a>
                 <button class="btn w-50" type="submit">
                   BOOK NOW
                 </button>
@@ -80,9 +80,8 @@
       </header>
       <div class="container">
         <div class="hero-text d-flex flex-column justify-content-center">
-          <h1>Architects of the future</h1>
-          <p>We believe that the magic of craftsmanship
-            lies <br /> beyond the reality of construction.</p>
+          <h1>Innovative Architectures <br /> of the future</h1>
+          <p>We believe in making your life more beautiful</p>
         </div>
       </div>
     </div>
@@ -95,32 +94,100 @@
         <div class="row g-1 g-lg-5">
           <div class="col-lg-6 col-12">
             <ul>
-              <li><strong>Inspired by Tagore’s Legacy:</strong>
-                Nestled in the heart of Shantiniketan, Hiyar Majhe is more than just a residential project—it's a
-                soulful tribute to Rabindranath Tagore’s vision of harmonious living with nature, art, and culture.
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span> <span><strong>Inspired by Tagore’s Legacy:</strong>
+                  Nestled in the heart of Shantiniketan, Hiyar Majhe is more than just a residential project—it's a
+                  soulful tribute to Rabindranath Tagore’s vision of harmonious living with nature, art, and
+                  culture.</span>
               </li>
-              <li><strong>Prime Location:</strong>
-                Located in Ballavpur, just minutes from the River Kopai and Amar Kutir Society, Hiyar Majhe offers the
-                perfect blend of natural beauty and cultural richness.</li>
-              <li><strong>Luxurious Yet Rooted</strong>
-                The project features 2, 3 & 4 BHK duplex bungalows and studio apartments that combine modern design with
-                the peaceful charm of rural Bengal.</li>
-              <li><strong>Thoughtfully Curated Amenities</strong>
-                From landscaped gardens and decorative water bodies to a swimming pool, clubhouse, guest house, and 24x7
-                security—every amenity is designed to enhance your lifestyle.</li>
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span> <span><strong>Prime Location:</strong>
+                  Located at Bolpur, Shantiniketan, near kopai river , beside Aditya Academy and Seva Institute of
+                  Nursing Home with a unadulterated elegance of Natural beauty and have a life like the beauty of
+                  flowing kopai.
+                </span></li>
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span> <span><strong>Luxurious Yet Rooted</strong>
+                  The project features 2, 3 & 4 BHK duplex bungalows and studio apartments that combine modern design
+                  with
+                  the peaceful charm of rural Bengal.</span></li>
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span><span><strong>Thoughtfully Curated Amenities</strong>
+                  From landscaped gardens and decorative water bodies to a swimming pool, clubhouse, guest house, and
+                  24x7
+                  security—every amenity is designed to enhance your lifestyle.</span></li>
             </ul>
           </div>
           <div class="col-lg-6 col-12">
             <ul>
-              <li><strong>Community-Centric Living:</strong>
-                Hiyar Majhe promotes a sense of togetherness with spaces that encourage interaction, events, and
-                community bonding.</li>
-              <li><strong>Eco-Conscious Approach:</strong>
-                With initiatives under the ‘Khushee’ banner, including tree plantations and support for local
-                communities, Hiyar Majhe is committed to sustainable and socially responsible living.</li>
-              <li><strong>Developer Credibility:</strong>
-                Brought to you by Krishna Charita Eco Homes, the project is backed by a team with a strong track record
-                of quality development and customer satisfaction.</li>
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span> <span><strong>Community-Centric Living:</strong>
+                  Hiyar Majhe promotes a sense of togetherness with spaces that encourage interaction, events, and
+                  community bonding.</span></li>
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span> <span><strong>Eco-Conscious Approach:</strong>
+                  With initiatives under the ‘Khushee’ banner, including tree plantations and support for local
+                  communities, Hiyar Majhe is committed to sustainable and socially responsible living.</span></li>
+              <li><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-sparkles-icon lucide-sparkles">
+                    <path
+                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z" />
+                    <path d="M20 3v4" />
+                    <path d="M22 5h-4" />
+                    <path d="M4 17v2" />
+                    <path d="M5 18H3" />
+                  </svg> </span> <span><strong>Developer Credibility:</strong>
+                  This is a residential complex built by Jagannath Construction for making your life beautiful with
+                  the rural beauty</span></li>
             </ul>
           </div>
         </div>
@@ -167,7 +234,7 @@
     </div>
   </section>
 
-  <section class="testimonial mt-5">
+  <section class="testimonial testimonial-home mt-5">
     <div class="container">
       <h2 class="mb-4">Let’s listen to what our delighted homeowners have to say</h2>
       <div class="row g-4">
@@ -214,8 +281,8 @@
           </div>
         </div>
       </div>
-      <a href="testimonial.html" class="view-more d-none d-lg-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-          viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+      <a href="testimonial.html" class="view-more d-none d-lg-block"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+          height="24" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="lucide lucide-arrow-right">
           <path d="M5 12h14" />
           <path d="m12 5 7 7-7 7" />
@@ -290,14 +357,15 @@
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-navigation">
                   <polygon points="3 11 22 2 13 21 11 13 3 11" />
-                </svg></span> Ballabpur, Dangapara <br> Bolpur Siriniketan, Panrui PS <br> Birbhum <br> West Bengal -
-              731236</li>
+                </svg></span><a href="https://maps.app.goo.gl/vhoavPUKtgLfkySd6" target="_blank"> Ballabpur, Dangapara
+                <br> Bolpur Siriniketan, Panrui PS <br> Birbhum <br> West Bengal -
+                731236</a></li>
             <li><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-phone">
                 <path
                   d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-              </svg> <span class="ps-2"><a href="tel:+9112345678"> +91 98765 43216</a></span></li>
+              </svg> <span class="ps-2"><a href="tel:+919330935204"> +91 93309 35204</a></span> </li>
             <li><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                 class="lucide lucide-mail">
@@ -310,25 +378,23 @@
           <h3>Quick links</h3>
           <ul>
             <li><a href="privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="privacy-policy.html">Terms of Service</a></li>
-            <li><a href="privacy-policy.html">FAQ</a></li>
-            <li><a href="privacy-policy.html">Walkthrough</a></li>
-            <li><a href="privacy-policy.html">Blogs</a></li>
+            <li><a href="terms-service.html">Terms of Service</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
         </div>
         <div class="col-lg-3 col-12 mt-3 mt-lg-0">
           <h3>Find us on</h3>
-          <div class="d-flex gap-3 "><span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          <div class="d-flex gap-3 "><span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-facebook">
                   <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
-                </svg></a></span> <span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                </svg></a></span> <span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-instagram">
                   <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
                   <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                   <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
-                </svg></a></span> <span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                </svg></a></span> <span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" class="lucide lucide-youtube">
                   <path
