--- a/location.html
+++ b/location.html
@@ -62,7 +62,7 @@
                         </li>
                     </ul>
                     <div class="d-flex align-items-center gap-3">
-                        <a class="call w-50 text-nowrap" href="tel:+9100000000">+91 98765 43210</a>
+                        <a class="call w-50 text-nowrap" href="+919330935204">+91 93309 35204</a>
                         <button class="btn w-50" type="submit">
                             BOOK NOW
                         </button>
@@ -73,9 +73,9 @@
     </header>
 
     <section class="container-fluid g-0 my-4">
-        <div class="d-flex justify-content-center ">
-            <img class="img-fluid" src="assets/img/site.jpg" alt="site">
-        </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3054.9097625349327!2d87.66765869999999!3d23.6590911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f9dd305ee5f17f%3A0x6b14c9331326f155!2sHiyar%20Majhe!5e1!3m2!1sen!2sin!4v1742559773192!5m2!1sen!2sin"
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <section class="nearby">
@@ -134,7 +134,8 @@
                 <div class="col-lg-4 col-12">
                     <h3>About Hiyar Majhe</h3>
                     <p>Live a fulfilling life amidst the tranquil charm of Ballabpur. Hiyar Majhe offers elegant
-                        bungalows and a lifestyle deeply rooted in Tagore's timeless vision of harmony with nature.</p>
+                        bungalows and a
+                        lifestyle deeply rooted in Tagore's timeless vision of harmony with nature.</p>
                     <p>Hiyar Majhe is <strong> RERA</strong> Registered. <br>WBRERA/P/BIR/2025/002461</p>
                     <p>For details, please visit <br /> <a class="text-decoration-underline"
                             href="https://www.rera.wb.gov.in/">www.rera.wb.gov.in</a></p>
@@ -146,14 +147,15 @@
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-navigation">
                                     <polygon points="3 11 22 2 13 21 11 13 3 11" />
-                                </svg></span> Ballabpur, Dangapara <br> Bolpur Siriniketan, Panrui PS <br> Birbhum <br>
-                            West Bengal - 731236</li>
+                                </svg></span><a href="https://maps.app.goo.gl/vhoavPUKtgLfkySd6" target="_blank">
+                                Ballabpur, Dangapara <br> Bolpur Siriniketan, Panrui PS <br> Birbhum <br> West Bengal -
+                                731236</a></li>
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="lucide lucide-phone">
                                 <path
                                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-                            </svg> <span class="ps-2"><a href="tel:+9112345678"> +91 98765 43216</a></span></li>
+                            </svg> <span class="ps-2"><a href="tel:+918272962740"> +91 82729 62740</a></span></li>
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="lucide lucide-mail">
@@ -166,25 +168,23 @@
                     <h3>Quick links</h3>
                     <ul>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="privacy-policy.html">Terms of Service</a></li>
-                        <li><a href="privacy-policy.html">FAQ</a></li>
-                        <li><a href="privacy-policy.html">Walkthrough</a></li>
-                        <li><a href="privacy-policy.html">Blogs</a></li>
+                        <li><a href="terms-service.html">Terms of Service</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-12 mt-3 mt-lg-0">
                     <h3>Find us on</h3>
-                    <div class="d-flex gap-3 "><span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                    <div class="d-flex gap-3 "><span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                     height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-facebook">
                                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
-                                </svg></a></span> <span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                                </svg></a></span> <span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                     height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram">
                                     <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
                                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                                     <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
-                                </svg></a></span> <span><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                                </svg></a></span> <span><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                     height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-youtube">
                                     <path
@@ -194,7 +194,8 @@
                 </div>
                 <div class="col-12 text-center mt-4 mt-lg-0" style="border-top: 1px solid #ccc;">
                     <p class="py-1">&copy; 2025 <a href="/">Hiyar Majhe</a>. <span>Design & Developed by <a href="">SG
-                                Webapp Techniques Pvt. Ltd.</a></span></p>
+                                Webapp
+                                Techniques Pvt. Ltd.</a></span></p>
                 </div>
             </div>
         </div>
